fix: align time in schedule

--- a/src/app/schedule/schedule/activity/activity.component.scss
+++ b/src/app/schedule/schedule/activity/activity.component.scss
@@ -13,6 +13,7 @@
   background-size: cover;
   padding: 1rem;
   text-align: center;
+  line-height: 15px;
 }
 
 .title {
